--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,18 @@
+@import '~inter-ui';
 @import '~@reach/dialog/styles.css';
+@import url('https://fonts.googleapis.com/css2?family=Inter:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap');
+
+* {
+  font-family: 'Inter', sans-serif;
+  box-sizing: border-box;
+}
+
+@supports (font-variation-settings: normal) {
+  * {
+    font-family: 'Inter', sans-serif;
+  }
+}
 
 html,
 body {
